syntax = "proto3";

package ingress;

option go_package = "github.com/vorteil/direktiv/pkg/ingress";

message GetSecretsRequest {
	optional string namespace = 1;
}

message GetSecretsResponse {
	message Secret {
		optional string name = 1;
	}
	repeated Secret secrets = 1;
}