syntax = "proto3";

package ingress;

option go_package = "github.com/vorteil/direktiv/pkg/ingress";

import "google/protobuf/timestamp.proto";

message GetWorkflowByUidRequest {
	optional string uid = 1;
	optional bool 	getReferences = 2;
}

message GetWorkflowByUidResponse {
	message References {
		message Secret {
			optional string key = 1;
		}
		message Variable {
			optional string key = 1;
			optional string scope = 2;
			repeated string operations = 3;
		}
		repeated Secret secrets = 1;
		repeated Variable variables = 2;
	}
	optional string uid = 1;
	optional string id = 2;
	optional int32 revision = 3;
	optional bool active = 4;
	optional google.protobuf.Timestamp createdAt = 5;
	optional string description = 6;
	optional bytes workflow = 7;
	optional string logToEvents = 8;
	optional References references = 9;
}