syntax = "proto3";

package ingress;

option go_package = "github.com/vorteil/direktiv/pkg/ingress";

message GetWorkflowVariableRequest {
	optional string workflowUid = 1;
	optional string key = 2;
}

message GetWorkflowVariableResponse {
	optional string name = 1;
	optional bytes value = 2;
}